# pdq

./: BENCH_REPORT.md  Cargo.toml  README.md  SUPREMACY_PLAN.md
.github/workflows/: ci.yml  release.yml
crates/pdq-wasm/: Cargo.toml  README.md
crates/pdq-wasm/src/: lib.rs
examples/: fastcount.rs
scripts/: benchmark.sh  fetch_corpus.sh  gen_benchmark_svg.py  lengths-pje.json  lengths-trf4.json  make_fixtures.py  make_text_fixtures.py  measure_mem.py  throughput_bench.py
src/: copy.rs  count.rs  dimensions.rs  filter.rs  lazy.rs  lib.rs  load.rs  merge.rs  range.rs  render.rs  repair.rs  scan.rs  split.rs  split_template.rs  text.rs  write.rs  xrefboot.rs
tests/: cli.rs  corpus.rs  dimensions.rs  real_world.rs  render.rs  repair.rs  split_merge.rs  text.rs  wasm_api.rs  xref_predictor.rs
