[package]
name = "pdq"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
license = "Artistic-2.0"
description = "PDF operations library"
repository = "https://github.com/meistrari/pdq"
readme = "README.md"
keywords = ["pdf", "split", "merge", "cli"]
categories = ["command-line-utilities"]

[features]
default = ["render"]
render = ["dep:hayro"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
hayro = { version = "0.7.1", features = ["embed-fonts"], optional = true }
lopdf = "0.43.0"
memmap2 = "0.9.9"
rayon = "1.12.0"
thiserror = "2.0.17"

[dev-dependencies]
assert_cmd = "2.1.1"
flate2 = "1.0"
predicates = "3.1.3"
tempfile = "3.23.0"
