[package]
name = "pdq"
version = "0.3.1"
edition = "2021"
rust-version = "1.92"
license = "Artistic-2.0"
description = "PDF operations library"
repository = "https://github.com/meistrari/pdq"
readme = "README.md"
keywords = ["pdf", "split", "merge", "cli"]
categories = ["command-line-utilities"]

[features]
default = ["render"]
render = ["dep:hayro"]
dhat-heap = ["dep:dhat"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dhat = { version = "0.3", optional = true }
hayro = { version = "0.7.1", features = ["embed-fonts"], optional = true }
lopdf = "0.43.0"
memchr = "2.7"
memmap2 = "0.9.9"
rayon = "1.12.0"
thiserror = "2.0.17"

[dev-dependencies]
assert_cmd = "2.1.1"
flate2 = "1.0"
predicates = "3.1.3"
tempfile = "3.23.0"

# Carry a patched hayro-interpret until the tint-transform memoization
# lands upstream (see issue #30): Separation/DeviceN color conversion
# re-ran the (PostScript) tint transform once per image pixel.
# Fork branch: tint-transform-lut-0.7 (based on hayro-interpret-v0.7.0).
[patch.crates-io]
hayro-interpret = { git = "https://github.com/henrycunh/hayro", branch = "tint-transform-lut-0.7" }
