[workspace]
members = [".", "crates/pdq-wasm"]
resolver = "2"

[package]
name = "pdq"
version = "0.3.1"
edition = "2021"
rust-version = "1.92"
license = "Artistic-2.0"
description = "PDF operations library"
repository = "https://github.com/meistrari/pdq"
readme = "README.md"
keywords = ["pdf", "split", "merge", "cli"]
categories = ["command-line-utilities"]

[features]
default = ["render", "text"]
render = ["dep:hayro"]
text = ["dep:hayro", "dep:kurbo"]
dhat-heap = ["dep:dhat"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dhat = { version = "0.3", optional = true }
hayro = { version = "0.7.1", features = ["embed-fonts"], optional = true }
kurbo = { version = "0.13.1", optional = true }
lopdf = "0.43.0"
memchr = "2.7"
memmap2 = "0.9.9"
rayon = "1.12.0"
thiserror = "2.0.17"

[dev-dependencies]
assert_cmd = "2.1.1"
flate2 = "1.0"
hayro = { version = "0.7.1", features = ["embed-fonts"] }
predicates = "3.1.3"
serde_json = "1.0"
tempfile = "3.23.0"

# getrandom has no default backend for wasm32-unknown-unknown; wasm_js provides one via wasm-bindgen.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.3", features = ["wasm_js"] }

# Carry a patched hayro-interpret until two fixes land upstream:
# - tint-transform memoization (issue #30): Separation/DeviceN color
#   conversion re-ran the (PostScript) tint transform once per image pixel.
# - AGL-spec glyph-name mapping (issue #32, upstream PR LaurenzV/hayro#1277):
#   variant suffixes (hyphen.case) and ligature components (f_i) resolved to
#   None, so `pdq text` flagged recoverable glyphs as degraded U+FFFD.
# Fork branch: agl-glyph-names-0.7 = tint-transform-lut-0.7 + the AGL fix
# (based on hayro-interpret-v0.7.0).
[patch.crates-io]
hayro-interpret = { git = "https://github.com/Guiqft/hayro", branch = "agl-glyph-names-0.7" }
